# monorepo

./: .dockerignore  .env  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .sqlfluff  BUILD  COMPLETE_SUMMARY.md  DOCKER_PANTS.md  Dockerfile  Makefile  README.md  RELEASE.md  SETUP.md  TEMPLATE.md  pants.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/setup-pants/: action.yml
.github/workflows/: README.md  ci.yml  docker-publish.yml  pages.yml  release.yml  weekly-release.yml
.pants.d/pids/56c0985f98fb/pantsd/: fingerprint  process_name
.pants.d/workdir/run-tracker/pants_run_2026_01_15_13_46_40_758_90636955115946d0926acd8cd57e6a9f/: logs
.pants.d/workdir/run-tracker/pants_run_2026_01_15_13_46_45_227_7e98c845992442f4b40861cf4d01bdee/: logs
.pants.d/workdir/run-tracker/pants_run_2026_01_15_13_48_31_154_f8aa4be6983846cfaac57f8dfd2cdeb5/: logs
.pants.d/workdir/run-tracker/pants_run_2026_01_15_13_48_41_959_18a73b3e256e4a4ba977c20da18cc762/: logs
.pants.d/workdir/run-tracker/pants_run_2026_01_15_13_50_00_279_1ee4e82fc39c4c80bc53f74c454f18bf/: logs
db_setup/: BUILD  Dockerfile.db  README.md
db_setup/sql/: 01_schema.sql  02_seed_data.sql  03_functions.sql
docker_linux/: Dockerfile  entrypoint.sh
docs/: COMPLETE_SUMMARY.md  DOCKER_PANTS.md  GITHUB_PAGES.md  README.md  RELEASE.md  SETUP.md  TEMPLATE.md
ercot_lmp/: BUILD  Dockerfile
ercot_lmp/scripts/: main.py
example_lib/: README.md  __init__.py  test_core.py
example_lib/utils/: __init__.py
examples/example_lib/: README.md  core.py  test_utils.py
examples/example_lib/utils/: helpers.py
examples/go_hello/: BUILD  go.mod  main.go
examples/hello_world/: BUILD  __init__.py
git_utils/: BUILD  main.py  test_main.py
github_fork_cleaner/: BUILD  __init__.py  main.py  test_main.py
hello_world/: main.py  test_main.py
infra/db_setup/: Dockerfile.db  README.md
infra/db_setup/sql/: 01_schema.sql  02_seed_data.sql
lib_ercot/: BUILD  test_main.py
lib_ercot/shared/: __init__.py  csv_writer.py  datetime_fmt.py  lmp_processor.py  retry_policy.py  string_utils.py  validators.py
lib_ercot/utils/: core.py
notes/: graceNotes.txt
sample_flask/: Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  seed_data.py
site/: 404.html  index.html  styles.css
tests/: BUILD  conftest.py  test_docker_images.py
tests/helpers/: docker_runner.py  output_converter.py  postgres_helper.py
uv_only_monorepo/: BUILD  main.py  pyproject.toml
uv_only_monorepo/apps/only_uv_monorepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uv_only_monorepo/apps/service_a/: BUILD  main.py
uv_only_monorepo/libs/math_library/: BUILD  pyproject.toml
uv_only_monorepo/libs/math_library/src/math_library/: BUILD  __init__.py
uv_only_monorepo/tests/: test_service_a.py
(+14 files in other folders)
