[project]
name = "sample-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adbc-driver-manager>=1.11.0",
    "adbc-driver-postgresql>=1.11.0",
    "connectorx>=0.4.5",
    "dash>=4.1.0",
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.49",
]
