[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "only-uv-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "math-library",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
math-library = { workspace = true }

[tool.uv.workspace]
members = ["libs/*"]

[tool.setuptools]
package-dir = {"" = "apps"}

[tool.setuptools.packages.find]
where = ["apps"]
