[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "only-uv-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "math-library",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
]

[tool.uv.sources]
math-library = { workspace = true }

[tool.uv.workspace]
members = ["libs/*"]

[tool.setuptools]
package-dir = {"" = "apps"}

[tool.setuptools.packages.find]
where = ["apps"]
